syntax = "proto3";
package seiprotocol.seichain.evm;

option go_package = "github.com/sei-protocol/sei-chain/x/evm/types";

message Log {
  string address = 1;
  repeated string topics = 2;
  bytes data = 3;
  uint32 index = 4;
}

message Receipt {
  uint32 tx_type = 1;
  uint64 cumulative_gas_used = 2;
  string contract_address = 3;
  string tx_hash_hex = 4;
  uint64 gas_used = 5;
  uint64 effective_gas_price = 6;
  uint64 block_number = 7;
  uint32 transaction_index = 8;
  uint32 status = 9;
  string from = 10;
  string to = 11;
  string vm_error = 12;
  repeated Log logs = 13;
  bytes logsBloom = 14;
}
